<resources>
    <string name="app_name">My Application</string>
    <string name="name">*Name</string>
    <string name="lastname">*Lastname</string>
    <string name="weight">Weight</string>
    <string name="photo_https_photo_name_jpeg">Photo (\'https://…/photo_name.jpeg\')</string>
    <string name="add">ADD</string>
    <string name="fields_marked_with_are_required">Fields marked with * are required</string>
    <string name="height">*Height</string>
    <string name="cm_label">%1$.0fcm</string>
    <string name="user_photo_profile">user photo profile</string>
</resources>